# axum_typed_multipart

./: .devcontainer.json  .editorconfig  .gitignore  .markdownlint.json  .pre-commit-config.yaml  Cargo.toml  README.md  codecov.yml  flake.nix  rust-toolchain.toml  rustfmt.toml  taplo.toml
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml  dependabot-auto-merge.yml  lint.yml  pr.yml  publish.yml  push.yml  release.yml  test.yml
core/: Cargo.toml
core/src/: field_data.rs  field_metadata.rs  lib.rs  temp_file.rs  try_from_field.rs  try_from_multipart.rs  typed_multipart.rs  typed_multipart_error.rs
examples/: basic.rs  custom_error.rs  flatten.rs  from_request.rs  nested.rs  state.rs  state_no_from_chunks_with_state.rs  type_safe_enums.rs  upload.rs  utoipa.rs
examples/utoipa/: Cargo.toml
examples/utoipa/src/: main.rs
macros/: Cargo.toml
macros/src/: case_conversion.rs  derive_input.rs  lib.rs  limit_bytes.rs  util.rs
macros/src/impls/: mod.rs  multipart_builder.rs  try_from_field.rs  try_from_multipart.rs  try_from_multipart_builder.rs
macros/tests/: test_bool.rs  test_builder.rs  test_defaults.rs  test_enum.rs  test_flatten.rs  test_hygiene.rs  test_identifiers.rs  test_lax.rs  test_limit.rs  test_list.rs  test_nested.rs  test_option.rs  test_state.rs  test_strict.rs
macros/tests/ui/: field_invalid_rename_all.rs  field_invalid_rename_all.stderr  field_on_non_unit_enum.rs  field_on_non_unit_enum.stderr  field_on_struct.rs  field_on_struct.stderr  multipart_duplicate_field_name.rs  multipart_duplicate_field_name.stderr  multipart_invalid_limit.rs  multipart_invalid_limit.stderr  multipart_invalid_rename_all.rs  multipart_invalid_rename_all.stderr  multipart_nested_non_path_type.rs  multipart_nested_non_path_type.stderr  multipart_nested_with_limit.rs  multipart_nested_with_limit.stderr  multipart_on_enum.rs  multipart_on_enum.stderr  multipart_on_tuple_struct.rs  multipart_on_tuple_struct.stderr  multipart_unknown_attribute.rs  multipart_unknown_attribute.stderr
src/: base_multipart.rs  field_builder.rs  field_data.rs  field_metadata.rs  field_name.rs  leaf_builder.rs  lib.rs  multipart_builder.rs  parse_index.rs  stateful_try_from_chunks.rs  stateful_try_from_field.rs  stateful_try_from_multipart.rs  temp_file.rs  try_from_chunks.rs  try_from_chunks_with_state.rs  try_from_field.rs  try_from_field_with_state.rs  try_from_multipart.rs  typed_multipart.rs  typed_multipart_error.rs  util.rs
test_external/: Cargo.toml
test_external/src/: lib.rs
test_helper/: Cargo.toml
test_helper/src/: lib.rs
tests/: mod.rs  test_default.rs  test_errors.rs  test_examples.rs  test_field_data.rs  test_field_order.rs  test_limit.rs  test_list.rs  test_optional_fields.rs  test_primitive_types.rs  test_raw_identifier.rs  test_renamed_fields.rs  test_strict.rs  test_temp_file.rs  test_try_from_field.rs  test_typed_multipart.rs  util.rs
