[workspace]
members = ["macros"]

[workspace.package]
authors = ["Lorenzo Murarotto <lnzmrr@gmail.com>"]
categories = ["web-programming"]
description = "Type safe multipart/form-data handling for axum."
edition = "2021"
keywords = ["axum", "form", "multipart"]
license = "MIT"
repository = "https://github.com/murar8/axum_typed_multipart"
version = "0.0.0"

[workspace.dependencies]
axum-test-helper = "0.4.0"
reqwest = "0.11.27"

[package]
name = "axum_typed_multipart"

authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }

[dependencies]
anyhow = "1.0.72"
axum = { version = "0.7.0", features = ["multipart"] }
axum_typed_multipart_macros = { path = "macros", version = "0.0.0" }
bytes = "1.4.0"
chrono = "0.4.37"
futures-core = "0.3.28"
futures-util = "0.3.28"
tempfile = "3.1.0"
thiserror = "1.0.44"
tokio = { version = "1.30.0", features = ["fs", "io-util", "macros", "rt-multi-thread"] }
uuid = "1.0.0"

[dev-dependencies]
axum-test-helper = { workspace = true }
reqwest = { workspace = true }
serde = { version = "1.0.193", features = ["derive"] }
