[workspace]
members = ["macros"]

[workspace.package]
authors = ["Lorenzo Murarotto <lnzmrr@gmail.com>"]
categories = ["web-programming"]
description = "Type safe multipart/form-data handling for axum."
edition = "2021"
keywords = ["axum", "form", "multipart"]
license = "MIT"
repository = "https://github.com/murar8/axum_typed_multipart"
version = "0.0.0"

[workspace.dependencies]
axum = "0.7.0"
axum-test-helper = "0.4.0"
reqwest = "0.11.23"
tokio = "1.25.0"

[package]
name = "axum_typed_multipart"

authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = ["chrono_0_4", "tempfile_3", "uuid_1"]

chrono_0_4 = ["dep:chrono_0_4"]
tempfile_3 = ["dep:tempfile_3", "dep:tokio"]
uuid_1 = ["dep:uuid_1"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }

[dependencies]
anyhow = "1.0.72"
axum = { workspace = true, features = ["multipart"] }
axum_typed_multipart_macros = { path = "macros", version = "0.0.0" }
bytes = "1.4.0"
futures-core = "0.3.31"
futures-util = "0.3.31"
thiserror = "1.0.7"

chrono_0_4 = { package = "chrono", version = "0.4.0", optional = true }
tempfile_3 = { package = "tempfile", version = "3.1.0", optional = true }
tokio = { workspace = true, features = ["fs", "io-util"], optional = true }
uuid_1 = { package = "uuid", version = "1.0.0", optional = true }

[dev-dependencies]
axum-test-helper = { workspace = true }
reqwest = { workspace = true }
serde = { version = "1.0.193", features = ["derive"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
