[package]
authors = ["Lorenzo Murarotto <lnzmrr@gmail.com>"]
description = "Macros for axum_typed_multipart."
edition = "2021"
license = "MIT"
name = "axum_typed_multipart_macros"
repository = "https://github.com/murar8/axum_typed_multipart"

[lib]
proc-macro = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }

[dependencies]
darling = "0.20.3"
heck = "0.5.0"
proc-macro-error = "1.0.4"
quote = "1.0.33"
syn = "2.0.39"
ubyte = "0.10.4"

[dev-dependencies]
axum = "0.7.0"
axum-test-helper = "0.4.0"
axum_typed_multipart = { path = ".." }
reqwest = "0.11.27"
tokio = "1.30.0"
