[package]
name = "axum_typed_multipart_macros"

authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lib]
proc-macro = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }

[dependencies]
darling = "0.20.3"
heck = "0.5.0"
proc-macro-error = "1.0.4"
quote = "1.0.33"
syn = "2.0.39"
ubyte = "0.10.4"

[dev-dependencies]
axum = "0.7.0"
axum-test-helper = { workspace = true }
axum_typed_multipart = { path = ".." }
reqwest = { workspace = true }
tokio = "1.30.0"
