[dependencies]
axum = { workspace = true, features = ["http2", "tokio"] }
reqwest = { workspace = true, features = ["json", "multipart"] }
tokio = { workspace = true }
tower = { version = "0.5.2", features = ["make"], default-features = false }
tower-service = "0.3.3"

[package]
description = "Test helper for axum_typed_multipart."
name = "axum_test_helper"
publish = false

authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
