[package]
edition = "2021"
name = "utoipa-example"

[workspace]

[dependencies]
axum = { version = "0.7.7", features = ["multipart"] }
axum_typed_multipart = { version = "0.0.0", path = "../.." }
serde = "1.0.210"
serde_json = "1.0.128"
tempfile = "3.13.0"
tokio = { version = "1.40.0", features = ["net", "rt-multi-thread"] }
utoipa = "4.2.3"
utoipa-rapidoc = { version = "4.0.0", features = ["axum"] }
